# VideoPlayer

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/lxc/videoplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/lxc/videoplayer/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/lxc/videoplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
player/: build.gradle
player/src/androidTest/java/com/lxc/player/: ExampleInstrumentedTest.java
player/src/main/: AndroidManifest.xml
player/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JNICallbackHelper.cpp  JNICallbackHelper.h  Log.h  SafeQueue.h  VideoChannel.cpp  VideoChannel.h  VideoPlayer.cpp  VideoPlayer.h  player.cpp  util.h
player/src/main/java/com/lxc/player/: NativeLib.java  VideoPlayer.java
player/src/main/res/layout/: view_video_player.xml
player/src/test/java/com/lxc/player/: ExampleUnitTest.java
